<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".UserInputActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lastNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <RadioGroup
            android:id="@+id/degreeProgramRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioTietotekniikka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tietotekniikka" />

            <RadioButton
                android:id="@+id/radioTuotantotalous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tuotantotalous" />

            <RadioButton
                android:id="@+id/radioLaskennallinenTekniikka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/laskennallinen_tekniikka" />

            <RadioButton
                android:id="@+id/radioSahkotekniikka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sahkotekniikka" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/imageRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/degreeProgramEditText"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/imageRadioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/custom_radio_button_1"
                android:button="@android:color/transparent"
                android:layout_marginEnd="10dp"/>

            <RadioButton
                android:id="@+id/imageRadioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/custom_radio_button_2"
                android:button="@android:color/transparent"/>

        </RadioGroup>

        <Button
            android:id="@+id/addUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageRadioGroup" />

    </LinearLayout>
</ScrollView>
